[package]
name = "github-code-searching"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
