[package]
name = "github-code-searching"
version = "0.3.1"
edition = "2021"
description = "Search and save code for keywords from GitHub"
readme = "README.md"
repository = "https://github.com/manorajesh/github-code-searching"
license = "MIT"
keywords = ["code", "search", "github"]
categories = ["web-programming::http-client"]
exclude = [".github"]

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.38", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.31"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false

[lib]
name = "github_code_searching_lib"
path = "src/lib.rs"

[[bin]]
name = "github-code-searching"
path = "src/main.rs"